# neural-representation-denoising

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  MODERNIZATION_AND_REPRODUCIBILITY_PLAN.md  README.md  pyproject.toml
.claude/skills/create-context-and-worklog/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  containers.yml
configs/dataset/: bsds500.yaml  div2k.yaml  synthetic.yaml
configs/preprocessing/: color_rgb.yaml  color_whitened.yaml
containers/: Dockerfile.cpu  Dockerfile.cuda  README.md
data/: README.md
data/manifests/: synthetic.csv
dissertation/: FILE_MAP.csv  MIGRATION_EXPECTED.csv  README.md  latexmkrc  main.tex
dissertation/chapters/: chap3.tex  chap5.tex
dissertation/preamble/: macros.tex  packages.tex  style.tex
docs/: baseline-audit-2026.md  claim-evidence-matrix.md  math-spec-attractor.md  math-spec-sparse-coding.md  result-inventory.csv  rewrite-2026-inventory.csv  tolerances.md
docs/decisions/: 0001-datasets-and-licenses.md  0002-python-pytorch-hydra-versions.md  0003-color-representation-and-noise-domain.md  0004-legacy-vs-corrected-equations.md  0005-confirmatory-seeds-and-statistics.md  0006-latex-engine.md  0007-repository-and-text-licenses.md  0008-offline-package-install.md  0009-gate-p2-cuda-runtime-criterion.md  0010-defer-real-dataset-artifacts.md  README.md
legacy/dissertation-2016/: MANIFEST.sha256  README.md
legacy/dissertation-2016/source/: abstract.tex  appendix.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  references.bib  thesis.tex
legacy/rewrite-2026/: LITERATURE_MATRIX.csv  MANIFEST.sha256  WRITING_PLAN.md
legacy/rewrite-2026/source/: abstract.tex  chap1.tex  references.bib
rewrite-2026/: README.md
rewrite-2026/source/: .gitignore  appendix.tex  chap2.tex  chap4.tex  doit.sh  thesis.tex
scripts/release/: build_dissertation.py  check_lineage.py  scan_public_leaks.py  verify_baselines.py
src/neural_repr/: __init__.py
src/neural_repr/attractor/: __init__.py  analysis.py  codes.py  dynamics.py  noise.py  trajectory.py  weights.py
src/neural_repr/cli/: __init__.py  aggregate.py  data.py  eval.py  figure.py  train.py  verify.py
src/neural_repr/common/: __init__.py  numerics.py
src/neural_repr/data/: __init__.py  audit.py  color.py  corruption.py  io_safe.py  manifests.py  patches.py  pipeline.py  (+5 more)
tests/numerical/: test_numerical_smoke.py
tests/phase3/: fdcheck.py  test_attractor_dynamics.py  test_attractor_weights.py  test_gabor.py  test_sparse_groups.py  test_sparse_inference.py
tests/phase4/: test_audit.py  test_color.py  test_committed_manifest.py  test_content_vs_encoding_digest.py  test_corruption.py  test_data_cli.py  test_io_safe.py  test_patches.py  test_pipeline.py  test_registry_manifests.py  test_stats.py  test_synthetic_and_pipeline.py  test_whitening.py
tests/regression/: numerical_smoke_reference.json  test_baselines.py  test_build_dissertation.py  test_leak_scanner.py  test_lineage.py
tests/unit/: test_cli.py  test_provenance.py  test_provenance_schema.py
(+27 files in other folders)
