[project]
name = "neural-repr"
version = "0.0.0"
description = "Modern reproduction of the 2016 dissertation: group sparse coding and noise-robust spatial attractors."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "TBD-see-docs/decisions/0007" }
authors = [{ name = "Chayut Thanapirom" }]

# Core runtime dependencies. Exact versions are pinned in the committed uv.lock;
# these constraints define the resolvable range (plan §3.1, decision 0002).
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11",
    "pandas>=2.1",
    "pillow>=10.0",
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3",
    "typer>=0.12",
    "tqdm>=4.66",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Torch is an extra so the CPU/dev install resolves fast and cross-platform;
# the cuda group (below) is for GPU wheels on the reference container.
image = [
    "torch>=2.2",
    "torchvision>=0.17",
    "scikit-image>=0.22",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tensorboard>=2.16",
    "einops>=0.7",
]
# GPU builds are installed on the public reference container from the official
# PyTorch CUDA index; kept separate so the default resolve stays CPU/portable.
cuda = [
    "torch>=2.2",
    "torchvision>=0.17",
]
latex-tools = [
    "pyyaml>=6.0",
]
release = [
    "cyclonedx-bom>=4.0",
]

[project.scripts]
neural-repr-data = "neural_repr.cli.data:main"
neural-repr-train = "neural_repr.cli.train:main"
neural-repr-eval = "neural_repr.cli.eval:main"
neural-repr-aggregate = "neural_repr.cli.aggregate:main"
neural-repr-figure = "neural_repr.cli.figure:main"
neural-repr-verify = "neural_repr.cli.verify:main"

[dependency-groups]
# Development tooling (installed by `uv sync`, excluded from the published wheel).
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "codespell>=2.3",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_repr"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# B008: calling typer.Option/typer.Argument in defaults is the idiomatic Typer
# pattern, not a bug. Scope the ignore to the CLI package.
[tool.ruff.lint.per-file-ignores]
"src/neural_repr/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["neural_repr"]
mypy_path = "src"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# Third-party libs without complete type stubs. Extended as these are imported.
module = ["tensorboard.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["neural_repr"]
branch = true

[tool.codespell]
skip = "legacy,*.lock,*.csv,.git,tmp,scratch"
